test/assignExp6.slq

def main(){
	x:=0:ğ”¹;
	x=H(x); /// error
	return x; /// error
}
